--- a/index.html
+++ b/index.html
@@ -13,6 +13,48 @@
 <img src="http://lorempixel.com/400/200/" alt="what even">
 
 	<h2>Favorite internet things</h2>
+	<br><br>
+	<h2>Week 2:</h2><br>
+	http://www.legworkstudio.com/home/services<br>
+	What I find interesting: Scroll through tabs<br>
+<br><br>
+	http://okfoc.us<br>
+	What I find interesting: Panoramic feature<br>
+<br><br>
+
+	<h2>Week 3:</h2><br>
+	http://oblique.ookb.co/index.html<br>
+	What I find interesting: Database of phrases, random per each refresh <br>
+<br><br>
+	http://cachemonet.com<br>
+	What I find interesting: Random background & Images<br>
+<br><br>
+	<h2>Week 4:</h2><br>
+	http://www.di09.rca.ac.uk<br>
+	What I find interesting: Interactive manipulation of where objects lie on the z-axis<br>
+<br><br>
+	http://www.vrasa.com<br>
+	What I find interesting: The interactive menu<br>
+<br><br>
+	<h2>Week 5:</h2><br>
+	http://www.chiptune.com/starfield/starfield.html<br>
+	What I find interesting: Responsive animation, super trip<br>
+<br><br>
+	http://whiteboard.is<br>
+	What I find interesting: The blurred background video makes breaks up what would otherwise feel like a fairly static design 
+<br><br><br>
+	<h2>Week 6:</h2><br>
+	http://timothee-roussilhe.com<br>
+	What I find interesting: While it’s a bit hard to navigate, it’s certainly engaging <br>
+<br><br>
+	<h2>Week 7:</h2><br>
+	http://lamoulade.com<br>
+	What I find interesting: Breaks a traditional grid (everything is diagonal) + parallax scrolling 👍<br><br><br>
+
+	http://slaveryfootprint.org/survey/#whats_on_your_plate<br>
+	What I find interesting: Interactive infographic, creates social awareness through an appreciable, interactive survey<br>
+	
+	<br><br><br>
 	<h3>Google</h3>
 
 	<h2>Process Posts</h2>
